--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: on-failure
 
   node-app:
-    build: .
+    build: /API
     image: node-app
     ports:
       - '${APP_PORT}:3000'
@@ -34,6 +34,18 @@ services:
     restart: on-failure
     command: yarn start -L
 
+  react-app:
+    build: /FE
+    ports:
+      - '8000:8000'
+    depends_on:
+      - node-app
+    volumes:
+      - .:/usr/src/react-app
+    networks:
+      - shared-network
+    command: yarn start -L
+
   nginx:
     image: nginx:alpine
     ports:
@@ -41,8 +53,8 @@ services:
     depends_on:
       - node-app
     volumes:
-      - "./public:/usr/src/node-app/public"
-      - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+      - "./API/public:/usr/src/node-app/public"
+      - "./API/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
     networks:
       - shared-network
 
