--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,21 @@
 upstream client {
-    server node-app:3000;
+    server api:3000;
 }
 
-upstream api {
-    server node-app:3000;
+upstream api-proxy {
+    server api:3000;
 }
 
 server {
     listen 80;
 
     location / {
-        root /usr/src/node-app/public/;
+        root /api/public/;
         try_files $uri $uri/ /index.html =404;
     }
 
     location /api {
-        proxy_pass http://api/api;
+        proxy_pass http://api-proxy/api;
 		proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
