--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ server {
     listen 80;
 
     location / {
-        root /api/public/;
+        root /usr/src/api/public/;
         try_files $uri $uri/ /index.html =404;
     }
 
