--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3'
 
 services:
-  database-layer:
+  database:
     image: postgres:12-alpine
-    container_name: database-layer
     environment:
         - DB_POSTGRES=true
         - PGPORT=5432
@@ -20,7 +19,6 @@ services:
 
   api:
     build: ./api
-    container_name: api_backend
     ports:
       - '${APP_PORT}:3000'
     environment:
@@ -31,18 +29,20 @@ services:
     networks:
       - shared-network
     depends_on:
-      - database-layer
+      - database
     command: yarn run dev -L
 
   nginx:
-    build: ./nginx
-    container_name: nginx
+    image: nginx:alpine
     ports:
       - '${NGINX_PORT}:80'
-    depends_on:
-      - api
+    volumes:
+      - "./client/public:/usr/src/api/public"
+      - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
     networks:
       - shared-network
+    depends_on:
+      - api
 
 volumes:
   api:
