--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,7 @@
-FROM nginx:1.21.6
-COPY ./index.html /usr/share/nginx/html/index.html
-#RUN rm /etc/nginx/conf.d/default.conf
-#COPY nginx.conf /etc/nginx/conf.d/default.conf
+#
+##FROM nginx
+##COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+##COPY --from=build /api/public /usr/share/nginx/html
+#
+#FROM nginx
+#COPY ./client/public /usr/share/nginx/html
