--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,17 +32,19 @@ services:
       - database
     command: yarn run dev -L
 
-  nginx:
-    image: nginx:alpine
+  client:
+    build: ./nginx
     ports:
       - '${NGINX_PORT}:80'
     volumes:
+      - /client/node_modules
       - "./client/public:/usr/src/api/public"
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
     networks:
       - shared-network
     depends_on:
       - api
+
 
 volumes:
   api:
