--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,2 @@
-#
-##FROM nginx
-##COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
-##COPY --from=build /api/public /usr/share/nginx/html
-#
-#FROM nginx
-#COPY ./client/public /usr/share/nginx/html
+FROM nginx:stable-alpine
+CMD ["nginx", "-g", "daemon off;"]
