--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
   api:
     build: ./api
     ports:
-      - '${APP_PORT}:3000'
+      - '${API_PORT}:3002'
     environment:
-      - NODE_CONFIG={"host":"${HOST}", "port":${APP_PORT}, "authentication":{ "oauth":{ "redirect":"http://${HOST}:${NGINX_PORT}/login?", "github":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/github/callback","key":"${GITHUB_KEY}","secret":"${GITHUB_SECRET}"}, "google":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/google/callback","key":"${GOOGLE_KEY}","secret":"${GOOGLE_SECRET}"}}},"postgresql":{"client":"pg","connection":"postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"}}
+      - NODE_CONFIG={"host":"${HOST}", "port":3002, "authentication":{ "oauth":{ "redirect":"http://${HOST}:${NGINX_PORT}/login?", "github":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/github/callback","key":"${GITHUB_KEY}","secret":"${GITHUB_SECRET}"}, "google":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/google/callback","key":"${GOOGLE_KEY}","secret":"${GOOGLE_SECRET}"}}},"postgresql":{"client":"pg","connection":"postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"}}
     volumes:
       - ./api:/api
       - /api/node_modules
@@ -33,21 +33,34 @@ services:
     command: yarn run dev -L
 
   client:
+    build: ./client
+    ports:
+      - '${APP_PORT}:3001'
+    environment:
+      - PORT=${APP_PORT}
+    volumes:
+      - /client/node_modules
+      - "./client/public:/usr/src/app/public/"
+    networks:
+      - shared-network
+
+
+  nginx-proxy:
     build: ./nginx
     ports:
       - '${NGINX_PORT}:80'
     volumes:
-      - /client/node_modules
-      - "./client/public:/usr/src/api/public"
+      - "./client/public:/usr/src/app/public"
       - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
     networks:
       - shared-network
     depends_on:
       - api
-
+      - client
 
 volumes:
   api:
+  client:
   database-volume:
 
 networks:
