--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,13 @@
-upstream client {
-    server api:3000;
+upstream client-proxy {
+    server client:3001;
 }
 
 upstream api-proxy {
-    server api:3000;
+    server api:3002;
 }
 
 server {
     listen 80;
-
-    location / {
-        root /usr/src/api/public/;
-        try_files $uri $uri/ /index.html =404;
-    }
 
     location /api {
         proxy_pass http://api-proxy/api;
@@ -23,5 +18,10 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    location / {
+        root /usr/src/app/public/;
+        try_files $uri $uri/ /index.html =404;
     }
 }
