--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "type": "module",
   "scripts": {
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up"
+    "docker:dev": "docker-compose -f docker-compose.yml up"
   },
   "dependencies": {},
   "devDependencies": {}
