--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "type": "module",
   "scripts": {
-    "docker:dev": "docker-compose -f docker-compose.yml up"
+    "docker:dev": "docker-compose -f docker-compose.yml up -d",
+    "docker:dev:rebuild": "docker compose -f docker-compose.yml up -d --build --force-recreate"
   },
   "dependencies": {},
   "devDependencies": {}
