--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,7 @@ services:
     environment:
       - NODE_CONFIG={"host":"${HOST}", "port":3002, "authentication":{ "jwtOptions":{ "audience":"${APP_URL}" }, "oauth":{ "redirect":"http://${HOST}:${NGINX_PORT}/login?", "github":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/github/callback","key":"${GITHUB_KEY}","secret":"${GITHUB_SECRET}"}, "google":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/google/callback","key":"${GOOGLE_KEY}","secret":"${GOOGLE_SECRET}"}}},"postgresql":{"client":"pg","connection":"postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"}}
     volumes:
-      - ./api:/api
-      - /api/node_modules
+      - api-volume:/api/node_modules
     networks:
       - shared-network
     depends_on:
@@ -50,7 +49,7 @@ services:
     ports:
       - '${NGINX_PORT}:80'
     volumes:
-      - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - shared-network
     depends_on:
@@ -70,8 +69,8 @@ services:
 
 
 volumes:
-  api:
   client:
+  api-volume:
   database-volume:
 
 networks:
