--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-app-name-api",
+  "name": "dev-log-api",
   "description": "Your app description",
   "version": "0.0.0",
   "homepage": "",
