--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-app-name",
+  "name": "dev-log",
   "description": "Your app description",
   "version": "0.0.0",
   "homepage": "",
