--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 HOST=localhost
 APP_URL=localhost
 APP_PORT=3000
+APP_API_URL=http://localhost:4000/api
+APP_GITHUB_LOGIN=http://localhost:4000/api/oauth/github
+APP_GOOGLE_LOGIN=http://localhost:4000/api/oauth/google
+
+API_PORT=3001
 NGINX_PORT=4000
 ADMIN_PORT=5000
 
