making coopse file items a little more unique to reduce clashes

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 upstream client-proxy {
-    server client:3001;
+    server dl-client:3001;
 }
 
 upstream api-proxy {
-    server api:3002;
+    server dl-api:3002;
 }
 
 server {
