--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  database:
+  dl-database:
     image: postgres:12-alpine
     environment:
         - DB_POSTGRES=true
@@ -17,7 +17,7 @@ services:
       - database-volume:/var/lib/postgresql/data
     restart: on-failure
 
-  api:
+  dl-api:
     build: ./api
     ports:
       - '${API_PORT}:3002'
@@ -28,10 +28,10 @@ services:
     networks:
       - shared-network
     depends_on:
-      - database
+      - dl-database
     command: yarn run dev -L
 
-  client:
+  dl-client:
     build: ./client
     ports:
       - '${APP_PORT}:3001'
@@ -47,7 +47,7 @@ services:
     networks:
       - shared-network
 
-  nginx-proxy:
+  dl-nginx-proxy:
     build: ./nginx
     ports:
       - '${NGINX_PORT}:80'
@@ -56,14 +56,14 @@ services:
     networks:
       - shared-network
     depends_on:
-      - api
-      - client
+      - dl-api
+      - dl-client
 
-  admin:
+  dl-admin:
     image: adminer
     restart: on-failure
     depends_on:
-      - database
+      - dl-database
     ports:
       - '${ADMIN_PORT}:8080'
     networks:
@@ -72,7 +72,7 @@ services:
 
 
 volumes:
-  client:
+  dl-client:
   api-volume:
   database-volume:
 
