--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - '${ADMIN_PORT}:8080'
     networks:
       - shared-network
-#   Link: http://0.0.0.0:8023/?pgsql=database%3A5432&username=dbuser&db=dbname&ns=public
+#   Link: http://0.0.0.0:8023/?pgsql=dl-database%3A5432&username=dbuser&db=dbname&ns=public&select=user
 
 
 volumes:
