--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: '3'
+version: "3"
 
 services:
   dl-database:
     image: postgres:12-alpine
     environment:
-        - DB_POSTGRES=true
-        - PGPORT=5432
-        - POSTGRES_USER=${DB_USER}
-        - POSTGRES_PASSWORD=${DB_PASSWORD}
-        - POSTGRES_DB=${DB_NAME}
+      - DB_POSTGRES=true
+      - PGPORT=5432
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     ports:
       - "${DB_PORT}:5432"
     networks:
@@ -20,7 +20,7 @@ services:
   dl-api:
     build: ./api
     ports:
-      - '${API_PORT}:3002'
+      - "${API_PORT}:3002"
     environment:
       - NODE_CONFIG={"host":"${HOST}", "port":3002, "authentication":{ "jwtOptions":{ "audience":"${APP_URL}" }, "oauth":{ "redirect":"http://${HOST}:${NGINX_PORT}/login?", "github":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/github/callback","key":"${GITHUB_KEY}","secret":"${GITHUB_SECRET}"}, "google":{"redirect_uri":"http://${HOST}:${NGINX_PORT}/api/oauth/google/callback","key":"${GOOGLE_KEY}","secret":"${GOOGLE_SECRET}"}}},"postgresql":{"client":"pg","connection":"postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"}}
     volumes:
@@ -34,7 +34,7 @@ services:
   dl-client:
     build: ./client
     ports:
-      - '${APP_PORT}:3001'
+      - "${APP_PORT}:3001"
     environment:
       - PORT=${APP_PORT}
       - WATCHPACK_POLLING=true
@@ -50,7 +50,7 @@ services:
   dl-nginx-proxy:
     build: ./nginx
     ports:
-      - '${NGINX_PORT}:80'
+      - "${NGINX_PORT}:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
@@ -65,11 +65,10 @@ services:
     depends_on:
       - dl-database
     ports:
-      - '${ADMIN_PORT}:8080'
+      - "${ADMIN_PORT}:8080"
     networks:
       - shared-network
 #   Link: http://0.0.0.0:8023/?pgsql=dl-database%3A5432&username=dbuser&db=dbname&ns=public&select=user
-
 
 volumes:
   dl-client:
