--- a/api/package.json
+++ b/api/package.json
@@ -42,7 +42,7 @@
     "prettier": "npx prettier \"**/*.js\" --write",
     "mocha": "cross-env NODE_ENV=test mocha test/ --recursive --exit",
     "test": "cross-env NODE_ENV=test npm run migrate && npm run mocha",
-    "test:direct": "cross-env NODE_ENV=test npm run mocha",
+    "test:jest": "cross-env NODE_ENV=test jest",
     "bundle:client": "npm pack --pack-destination ./public",
     "migrate": "knex migrate:latest",
     "migrate:make": "knex migrate:make",
