--- a/api/package.json
+++ b/api/package.json
@@ -64,6 +64,7 @@
     "@feathersjs/socketio": "^5.0.0-pre.34",
     "@feathersjs/transport-commons": "^5.0.0-pre.34",
     "dotenv": "^16.0.3",
+    "feathers-authentication-management": "^4.0.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
     "winston": "^3.8.2"
