--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,12 @@ DB_PORT=5432
 DB_USER=dbuser
 DB_PASSWORD=dbpassword
 
+MAIL_ACTIVE="false"
+MAIL_FROM="hi@your.email"
+MAIL_HOST="api.mail.service"
+MAIL_DOMAIN="mail.yourwebsite.co.uk"
+MAIL_API="key-for-your-mail-service-here"
+
 # OAUTH - GITHUB
 GITHUB_KEY=long-github-key
 GITHUB_SECRET=long-github-secret
@@ -25,3 +31,6 @@ GITHUB_SECRET=long-github-secret
 GOOGLE_KEY=superLongKeyID.apps.googleusercontent.com
 GOOGLE_SECRET=superLongSecretID-K0H
 #https://console.cloud.google.com/apis/credentials/consent?project=your-app-name
+
+# GOOGLE API CAL KEY
+GOOGLE_CAL_KEY=xxxx
