--- a/api/package.json
+++ b/api/package.json
@@ -67,6 +67,7 @@
     "feathers-authentication-management": "^4.0.2",
     "feathers-hooks-common": "^7.0.3",
     "knex": "^2.3.0",
+    "mailgun-js": "^0.22.0",
     "pg": "^8.8.0",
     "winston": "^3.8.2"
   },
