--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 HOST=localhost
-APP_URL=localhost
+APP_URL=http://localhost
 APP_PORT=3000
 APP_API_URL=http://localhost:4000/api
 APP_GITHUB_LOGIN=http://localhost:4000/api/oauth/github
