--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -11,17 +11,17 @@ jobs:
     # Set the base environment to run the Action on
     runs-on: ubuntu-latest
 
-    # strategy:
-    #   matrix:
-    #     node-version: [14.x, 16.x, 18.x, 20.x]
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     # Steps to complete the job
     steps:
-      # - uses: actions/checkout@v3
-      # - name: Use Node.js ${{ matrix.node-version }}
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: ${{ matrix.node-version }}
-      # - run: npm ci
-      # - run: npm run build --if-present
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
       - run: npm test:unit
+      - run: npm run build --if-present
