--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -22,6 +22,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      # - run: npm ci
       - run: npm test:unit
-      - run: npm run build --if-present
+      # - run: npm run build --if-present
