--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -11,17 +11,33 @@ jobs:
     # Set the base environment to run the Action on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [16.x]
 
-    # Steps to complete the job
+    # # Steps to complete the job
+    # steps:
+    #   - uses: actions/checkout@v3
+    #   - name: Use Node.js ${{ matrix.node-version }}
+    #     uses: actions/setup-node@v3
+    #     with:
+    #       node-version: ${{ matrix.node-version }}
+    #   # - run: npm ci
+    #   - run: npm run test:unit
+    #   # - run: npm run build --if-present
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      # - run: npm ci
-      - run: npm run test:unit
-      # - run: npm run build --if-present
+          node-version: 16.x
+          cache: npm
+
+      # - name: Install
+      #   run: npm ci
+
+      - name: Run tests
+        run: npm run test:unit
